--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.10.1",
+    "gulp": "^3.9.1",
+    "gulp-s3": "^0.11.0",
+    "gulp-util": "^3.0.8",
     "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.2.0",
