--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ],
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
@@ -27,6 +32,7 @@
     "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.2.0",
     "node-sass": "^4.5.0",
+    "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
     "style-ext-html-webpack-plugin": "^3.3.0",
@@ -35,8 +41,6 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "jquery": "^3.1.1",
-    "jquery.marquee": "^1.3.94",
-    "masonry-layout": "^4.1.1"
+    "jquery": "^3.1.1"
   }
 }
