--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.27.2",
+    "eslint": "^4.6.1",
+    "eslint-plugin-react": "^7.3.0",
     "extract-loader": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "favicons-webpack-plugin": "0.0.7",
@@ -34,6 +37,7 @@
     "node-sass": "^4.5.0",
     "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
+    "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.3",
     "style-ext-html-webpack-plugin": "^3.3.0",
     "style-loader": "^0.13.2",
@@ -41,6 +45,9 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2"
   }
 }
