--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.3",
+    "static-site-generator-webpack-plugin": "^3.4.1",
     "style-ext-html-webpack-plugin": "^3.3.0",
     "style-loader": "^0.13.2",
     "webpack": "^2.5.1",
