--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jquery": "^3.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "superagent": "^3.6.0"
   }
 }
